set payoutToolId as required